Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102874

Failing tst_qbluetoothlocaldevice (hostmode and manual pairing) on Android

    XMLWordPrintable

Details

    • Android
    • 13
    • 7957bc177e (qt/qtconnectivity/dev) 7957bc177e (qt/tqtc-qtconnectivity/dev)
    • Team A Foundation Sprint 57

    Description

      The task QTBUG-100984 made most of the autotests pass on the supported platforms.

      There are few more items to investigate and fix, covered by this item:

      • tst_qbluetoothlocaldevice hostmode test on Android 12 device likely requires changes to test case. The issue there is that changing host mode to either HostConnectable or HostDiscoverable is constrained by the device's bluetooth setting. This causes the test to fail as one of those states is not possible to enter as they seem to be dictated by the UI setting
      • tst_qbluetoothlocaldevice manual pairing test on Android likely requires changes to the test case. The word "manual" here means that the BT_TEST_DEVICE environment variable is set and the test interacts with another device. There is a reasonable doubt that some code changes might be needed as well but that remains to be seen

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vuokko Juha Vuolle
            vuokko Juha Vuolle
            Vladimir Minenko Vladimir Minenko
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes