Android bluetooth local device always to use "Paired"

QBluetoothLocalDevice on Android doesn't distinguish between
"AuthorizedPaired" and "Paired" but regresses to "Paired".

This commit changes one place where the code echoes back whatever
pairing mode the user requested, instead of "Paired". This caused
the sent pairingFinished() signal to have different value than
what a call to pairingStatus() gives.

In addition this commit fixes the related autotest when run in "manual
mode" ie. the BT_TEST_DEVICE and live counterpart device is used.

Task-number: QTBUG-102874
Change-Id: I24c76b03ad1d0b27b8afeaf94f146393e4547712
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>